TFP-5668: Tar i bruk V3 kvittering endepunkt som ikke lenger trenger dokument mal (#2502)
* TFP-5668: Tar i bruk V3 kvittering endepunkt som ikke lenger trenger dokument mal.

* Utvidet logging.

* Flytter opprettelse av selve Dtoen noe lengre ned.